chore: integrate w directus

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,20 @@
 # Directus Configuration
 NEXT_PUBLIC_DIRECTUS_URL=http://localhost:8055
+DIRECTUS_SECRET=your-super-secret-key-here-change-this-value
+DIRECTUS_ADMIN_EMAIL=admin@example.com
+DIRECTUS_ADMIN_PASSWORD=admin123
+
+# Database Configuration
+DB_PASSWORD=your-secure-db-password-here
+DB_USER=directus
+DB_NAME=directus
+
+# CORS Configuration (adjust to match your Next.js app URL)
+CORS_ORIGIN=http://localhost:3000
+
+# Port Configuration
+DIRECTUS_PORT=8055
+POSTGRES_PORT=5432
 
 # Site Configuration  
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
